feat(admin): migrate files to generated api
